--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Course Assignments
-description: A home for all my online course assignments
+title: Projects
+description: A home for all my coding projects
