--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Projects
-description: A home for all my coding projects
+title: Courses
+description: A home for all my course assignments
